--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,34 @@
 version: '3.9'
 
 services:
-  car-rental-app:
-    container_name: car-rental-app
-    image: wolfi211/car_rental_app:1.0.0
-    build: .
+  carrentalapp:
+    container_name: carrentalapp
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        DB_URL: ${DB_URL}
+        PG_USER: ${PG_USER}
+        PG_PASSWORD: ${PG_PASSWORD}
     ports:
-      - 8080:8080
+      - "8080:8080"
     environment:
-      - DATABASE_URL=jdbc:postgresql://localhost:5432/postgres
-      - DATABASE_USERNAME=postgres
-      - DATABASE_PASSWORD=postgres
+      DB_URL: jdbc:postgresql://db:5432/postgres
+      PG_USER: postgres
+      PG_PASSWORD: postgres
     depends_on:
-      - car-rental-db
-  car-rental-db:
-    container_name: car-rental-db
+      - db
+  db:
+    container_name: db
     image: postgres:12
-    ports:
-      - 5432:5432
     environment:
-      POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
+    ports:
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+
 volumes:
   pgdata: {}
