changed back to normal execution from docker for development phase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${PG_USER}
-spring.datasource.password=${PG_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${PG_USER}
+#spring.datasource.password=${PG_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
